# R-Pi-Cluster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindRapidJson.cmake  README.md  version.cmake
Client/: CMakeLists.txt  main.cpp
ClientLib/ClientLib/: CMakeLists.txt  Client.cpp  Client.hpp
Documents/: Help.txt  Web Content.txt
Documents/Images/: computer.ai  internet.ai
Playground/: CMakeLists.txt  main.cpp
Scripts/: Install.sh  InstallClient.sh  ServerService  cloneUrl.bat  cloneUrl.sh  fabfile.py
Server/: CMakeLists.txt  main.cpp
ServerLib/ServerLib/: CMakeLists.txt  Server.cpp  Server.hpp
ServerLib/ServerLib/Msgs/: ReceiveHeartBeat.cpp  ReceiveHeartBeat.hpp  ReceiveUpdateAck.cpp  ReceiveUpdateAck.hpp
Shared/: CMakeLists.txt
Shared/Gui/Gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Shared/Logger/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
Shared/Logger/Logger/test/: CMakeLists.txt  LoggerTestMain.cpp
Shared/Messages/Messages/: CMakeLists.txt  ClientInfo.hpp  Conversation.hpp  JSONHelpers.cpp  JSONHelpers.hpp  JSONParser.cpp  JSONParser.hpp  MakeJSONMsgs.cpp  MakeJSONMsgs.hpp  MakeMsgs.cpp  MakeMsgs.hpp  MapHelpers.hpp
Shared/Messages/Messages/Manager/: .JobManager.cpp.swp  ClientManager.cpp  ClientManager.hpp  ClientResultsManager.cpp  ClientResultsManager.hpp  Execute.cpp  Execute.hpp  ExecuteManager.cpp  ExecuteManager.hpp  Job.cpp  Job.hpp  JobManager.cpp  JobManager.hpp  Manager.hpp  Pi.cpp  Results.cpp  Results.hpp  ServerManager.cpp  ServerManager.hpp  Tasks.cpp  Tasks.hpp
Shared/Messages/Messages/Pi/: .Pi.cpp.swp  NewPiManager.cpp  NewPiManager.hpp  Pi.cpp  Pi.hpp  PiClientManager.cpp  PiClientManager.hpp  PiServerManager.cpp  PiServerManager.hpp
Shared/Messages/Messages/Test/: CMakeLists.txt  ManagerTestMain.cpp  ManagerTestMain.hpp  MessagesTestMain.cpp  MessagesTestMain.hpp  TestMain.cpp
Shared/ProtoFiles/: CMakeLists.txt
Shared/ProtoFiles/ProtoFiles/: Backup.proto  BasicMsg.proto  CMakeLists.txt  IDMsg.proto  MsgToSend.proto  Results.proto  TaskMsg.proto  TestMsg.proto  Update.proto
Shared/ProtoFiles/ProtoFiles/test/: ProtoFilesTestMain.cpp
Shared/ProtoFiles/test/: CMakeLists.txt
Shared/TCPSender/TCPSender/: CMakeLists.txt  Listener.cpp  Listener.hpp  TCPEndpoint.cpp  TCPEndpoint.hpp  TCPHelpers.hpp  TCPSender.cpp  TCPSender.hpp  TCPSenderClient.cpp  TCPSenderClient.hpp  TCPSenderServer.cpp  TCPSenderServer.hpp  TCPSenderWeb.cpp  TCPSenderWeb.hpp
Shared/TCPSender/TCPSender/Test/: CMakeLists.txt  UDPSenderTest.cpp
Shared/UDPSender/UDPSender/: CMakeLists.txt  UDPSender.cpp  UDPSender.hpp
Shared/UDPSender/UDPSender/Test/: UDPSenderTest.cpp
Web/: MainPage.css  MainPage.html  MainPage.js  PiPage.html  PiPage.js  README.md  fix_list.txt  index.html  main.js  package-lock.json  package.json  reset.html
Web/gui/: README.md  client.js  index.html  package.json  reset.html  server.js
Web/gui/client/: client.js  index.html
Web/gui/client/media/: Thumbs.db
Web/gui/client/scripts/: jobs.js  load.js  menu.js  system.js  units.js
Web/gui/client/styles/: menu.css
Web/gui/data/: scores.txt
Web/gui/images/: Thumbs.db
Web/gui/pages/: help.html  popup.html
Web/gui/scripts/: jobs.js  loader.js  menu.js  system.js  units.js
Web/gui/styles/: jobs.css  menu.css  system.css  units.css
cmake/Modules/: FindRapidJson.cmake
images/: system_gui.ai
